# one-word-server

./: Cargo.toml  README.md
src/: main.rs
